//bugzilla.gnome.org/show_bug.cgi?id=169758. Reduce the number of

*  Fix for http://bugzilla.gnome.org/show_bug.cgi?id=169758.  Reduce the number of round-trips between managed and unmanaged code.